# cln

./: package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: file_scanner.toml  processes.toml  quick_fixes.toml
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: file_scanner.rs  mod.rs  processes.rs  quick_fixes.rs
src-tauri/src/models/: disk_health.rs  event_log_entry.rs  mod.rs  process_info.rs  scan_result.rs  temp_clean.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/maintenance/: disk_health.rs  event_log.rs  mod.rs  temp_cleaner.rs
src-tauri/src/modules/processes/: monitor.rs
src-tauri/src/modules/scanner/: actions.rs  core.rs
src/css/: index.css
src/js/: app.js  ipc.js
src/js/modules/: processes.js  quick-fixes.js  scanner.js
